--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.0",
     "@tailwindcss/vite": "^4.0.9",
+    "bootstrap": "^5.3.3",
+    "lottie-react": "^2.4.1",
+    "lottie-web": "^5.12.2",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-router": "^7.4.1",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.9"
   },
