--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@mui/material": "^7.0.0",
     "@tailwindcss/vite": "^4.0.9",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.6.0",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.12.2",
     "react": "^19.0.0",
