--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
+credentials
+
 
 # Editor directories and files
 .vscode/*
@@ -25,3 +27,5 @@ dist-ssr
 .public 
 desktop.ini
 public/
+dataconnect
+dataconnect-generated
