--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@tailwindcss/vite": "^4.0.9",
     "bootstrap": "^5.3.3",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.3.0",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.12.2",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
