--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.3.0",
+    "framer-motion": "^12.10.1",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.12.2",
     "node-fetch": "^3.3.2",
@@ -25,6 +26,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
+    "react-router-dom": "^7.5.3",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.9"
   },
